# terprint-ai-stock

./: .gitignore  DEPLOYMENT.md  Dockerfile  README.md  app.py  problem_details.py  pyproject.toml  stock_updater.py
.github/workflows/: deploy.yml
docs/: ARCHITECTURE.md
