[tool.poetry]
name = "terprint-ai-stock"
version = "1.0.0"
description = "Terprint AI Stock - Real-time cannabis product inventory tracking service"
authors = ["Acidni LLC <support@acidni.net>"]
readme = "README.md"
packages = [{include = ".", from = "."}]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = ">=2.9,<2.10"
pydantic-settings = "^2.0"
azure-cosmos = "^4.5.0"
azure-identity = "^1.15.0"
azure-storage-blob = "^12.19.0"
httpx = "^0.25.0"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
black = "^24.0.0"
ruff = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"
